<resources>
    <string name="app_name">酷云天气</string>
    <string name="github">Github地址：</string>
    <string name="blog">blog 主页：</string>
    <string name="https_github_com_lynnyuki">https://Github.com/LynnYuki</string>
    <string name="https_lynnyuki_github_io">https://lynnyuki.github.io</string>
    <string name="lynnyuki">应用作者 ： LynnYuki</string>
    <string name="about_app_name">应用名称 ：酷云天气</string>
    <string name="version">版本号 1.0</string>
    <string name="one_hour">一小时</string>
    <string name="three_hour">三小时</string>
    <string name="no_autoupdate">不进行自动更新</string>
    <string name="two_hour">两小时</string>
    <string name="five_hour">五小时</string>
    <string name="ten_hour">十小时</string>
    <string name="search">搜索</string>
    <string name="delteall">清空搜索记录</string>
    <string name="search_value">查找的城市</string>
    <string name="search_record">查找记录</string>
    <string name="about_weather">关于天气</string>
    <string name="update_frequency">更新频率</string>
    <string name="choose_area">选择地区</string>
    <string name="aqi">AQI 指数</string>
    <string name="co">CO 指数</string>
    <string name="o3">O3 指数</string>
    <string name="pm10">PM10 指数</string>
    <string name="pm2_5">PM2.5 指数</string>
    <string name="so2">SO2 指数</string>
    <string name="mode_by_lynnyuki">Mode By LynnYuki</string>
    <string name="度">°</string>
    <string name="cold">感冒指数</string>
    <string name="car_wash">洗车指数</string>
    <string name="wear_clothes">穿衣指数</string>
    <string name="uv">紫外线指数</string>
    <string name="comfortable">舒适指数</string>
    <string name="sport">运动指数</string>
    <string name="setting">设置</string>
    <string name="night_model">夜间模式</string>
    <string name="city_manage">城市管理</string>
    <string name="title_activity_city_manage">城市管理</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
