<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite"
        app:titleTextColor="@color/colorFont"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@color/colorWhite"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="3dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/logo"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:text="@string/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorFont"
                android:layout_marginTop="7dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/about_app_name"
                android:textSize="14sp"
                android:textColor="@color/colorFont"
                android:gravity="left"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lynnyuki"
                android:textColor="@color/colorFont"
                android:textSize="14sp"
                android:gravity="left"
                tools:ignore="RtlHardcoded" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent">

                <TextView
                    android:text="@string/blog"
                    android:textSize="14sp"
                    android:textColor="@color/colorFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <Button
                    android:id="@+id/blog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/https_lynnyuki_github_io"
                    android:textAllCaps="false"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorFont"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent">

                <TextView
                    android:text="@string/github"
                    android:textSize="14sp"
                    android:textColor="@color/colorFont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/github"
                    android:layout_width="0dp"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/https_github_com_lynnyuki"
                    android:textAllCaps="false"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorFont"
                    />

            </LinearLayout>



        </LinearLayout>




    </android.support.v7.widget.CardView>




</LinearLayout>
