<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite"
        app:titleTextColor="@color/colorFont"/>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="20dp"
        android:background="@color/colorWhite"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="0dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite">

                <EditText
                    android:id="@+id/search_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:hint="@string/search_value"
                    android:textColorHint="@color/colorFont"
                    android:textColor="@color/colorFont"/>

                <Button
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:text="@string/search"
                    android:textSize="16sp"
                    android:textColor="@color/colorFont"
                    android:layout_height="wrap_content"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/ripple"
                    />


            </LinearLayout>

            <ListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="0dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite">
            <TextView
                android:text="@string/search_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textColor="@color/colorFont"
                tools:ignore="InefficientWeight" />
            <Button
                android:id="@+id/deleteall_button"
                android:layout_width="wrap_content"
                android:text="@string/delteall"
                android:textSize="16sp"
                android:textColor="@color/colorFont"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/ripple"
                />
        </LinearLayout>
            <ListView
                android:layout_marginTop="10dp"
                android:id="@+id/list_view_recond"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>
