<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        tools:ignore="DisableBaselineAlignment">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2.5dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"

            tools:ignore="RtlHardcoded">

            <Button
                android:id="@+id/comfort_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple" />

            <TextView
                android:id="@+id/comfort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/comfortable"
                android:textColor="@color/colorFont"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/comfort_pic"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/ic_comfort"
                android:layout_above="@+id/comfort"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/comfort_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/comfort"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:layout_weight="1"
            android:background="@color/colorWhite">

            <Button
                android:id="@+id/car_wash_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple" />

            <TextView
                android:id="@+id/car_wash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/car_wash"
                android:textColor="@color/colorFont"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/car_wash_pic"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/ic_car"
                android:layout_above="@+id/car_wash"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/car_wash_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/car_wash"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            tools:ignore="RtlHardcoded">

            <Button
                android:id="@+id/sport_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple" />

            <TextView
                android:id="@+id/sport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sport"
                android:textColor="@color/colorFont"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/sport_pic"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/ic_sport"
                android:layout_above="@+id/sport"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/sport_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sport"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />


        </RelativeLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        tools:ignore="DisableBaselineAlignment">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2.5dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            tools:ignore="RtlHardcoded">


            <Button
                android:id="@+id/cold_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/ripple"/>

            <TextView
                android:id="@+id/cold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/cold"
                android:textColor="@color/colorFont"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/cold_pic"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/ic_cold"
                android:layout_above="@+id/cold"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/cold_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cold"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp"
            android:layout_weight="1"
            android:background="@color/colorWhite">

            <Button
                android:id="@+id/clothes_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/ripple"/>

            <TextView
                android:id="@+id/clothes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/wear_clothes"
                android:textColor="@color/colorFont"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/colthes_pic"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/ic_clothes"
                android:layout_above="@+id/clothes"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/clothes_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/clothes"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            tools:ignore="RtlHardcoded">

            <Button
                android:id="@+id/uv_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/ripple"/>

            <TextView
                android:id="@+id/uv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/uv"
                android:textColor="@color/colorFont"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/uv_pic"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/ic_uv"
                android:layout_above="@+id/uv"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/uv_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uv"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />


        </RelativeLayout>

    </LinearLayout>

</LinearLayout>